--- a/pom.xml
+++ b/pom.xml
@@ -177,6 +177,14 @@
       <version>1.8</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.yaml/snakeyaml -->
+    <dependency>
+      <groupId>org.yaml</groupId>
+      <artifactId>snakeyaml</artifactId>
+      <version>1.28</version>
+    </dependency>
+
+
 
     <!-- https://mvnrepository.com/artifact/org.phenopackets/phenopacket-schema -->
     <dependency>
@@ -251,13 +259,6 @@
       <version>3.8.0</version>
     </dependency>
 
-    <!-- https://mvnrepository.com/artifact/com.h2database/h2-mvstore -->
-    <dependency>
-      <groupId>com.h2database</groupId>
-      <artifactId>h2-mvstore</artifactId>
-      <version>1.4.200</version>
-    </dependency>
-
     <!-- https://mvnrepository.com/artifact/info.picocli/picocli -->
     <dependency>
       <groupId>info.picocli</groupId>
@@ -265,6 +266,12 @@
       <version>4.6.1</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>28.2-jre</version>
+    </dependency>
 
     <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
     <dependency>
@@ -359,7 +366,10 @@
     </configuration>
   </plugin>
 
-  <plugin>
+
+
+
+      <plugin>
     <groupId>org.apache.maven.plugins</groupId>
     <artifactId>maven-compiler-plugin</artifactId>
     <version>3.8.1</version>
